@@ -13,10 +13,11 @@ before_install:
   - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
   - chmod 755 ./travis-tool.sh
   - ./travis-tool.sh bootstrap
+  - sudo add-apt-repository -y ppa:edd/misc
+  - sudo apt-get update -q
 
 install:
-  - ./travis-tool.sh install_r highlight
-  - ./travis-tool.sh install_r Rcpp
+  - ./travis-tool.sh install_aptget r-cran-rcpp r-cran-highlight
   
 script:
   - ./travis-tool.sh run_tests
