@@ -1,3 +1,7 @@
+2015-02-12  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .travis.yml: Use ppa:edd/misc to apt-get install Rcpp and highlight
+
 2015-01-05  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION: Version 0.2.4
